<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.car.presentation.splash.SplashFragment"
        android:label="@string/splash_title"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splash_to_carList"
            app:destination="@id/carListFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/carListFragment"
        android:name="com.example.car.presentation.cars.CarListFragment"
        android:label="@string/car_list_title"
        tools:layout="@layout/fragment_car_list">
        <action
            android:id="@+id/action_carList_to_carDetail"
            app:destination="@id/carDetailFragment" />
        <action
            android:id="@+id/action_carList_to_bookingList"
            app:destination="@id/bookingListFragment" />
        <action
            android:id="@+id/action_carList_to_settings"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/carDetailFragment"
        android:name="com.example.car.presentation.cardetail.CarDetailFragment"
        android:label="@string/car_detail_title"
        tools:layout="@layout/fragment_car_detail">
        <argument
            android:name="carId"
            app:argType="string" />
        <action
            android:id="@+id/action_carDetail_to_bookingEdit"
            app:destination="@id/bookingEditFragment" />
    </fragment>

    <fragment
        android:id="@+id/bookingListFragment"
        android:name="com.example.car.presentation.booking.BookingListFragment"
        android:label="@string/booking_list_title"
        tools:layout="@layout/fragment_booking_list">
        <action
            android:id="@+id/action_bookingList_to_bookingEdit"
            app:destination="@id/bookingEditFragment" />
    </fragment>

    <fragment
        android:id="@+id/bookingEditFragment"
        android:name="com.example.car.presentation.booking.BookingEditFragment"
        android:label="@string/booking_edit_title"
        tools:layout="@layout/fragment_booking_edit">
        <argument
            android:name="bookingId"
            app:argType="long"
            android:defaultValue="0L" />
        <argument
            android:name="carId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.car.presentation.settings.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_settings" />
</navigation>
